# rmcp-i3

./: Cargo.toml  README.md
src/: lib.rs  main.rs
